--- a/Raspberry/requirementsV1.txt
+++ b/Raspberry/requirementsV1.txt
@@ -1,7 +1,9 @@
 blinker==1.8.2
 click==8.1.7
 Flask==3.0.3
+future==1.0.0
 importlib_metadata==8.5.0
+iso8601==2.1.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
@@ -11,5 +13,7 @@ pkg_resources==0.0.0
 PyQt5==5.15.11
 PyQt5-Qt5==5.15.15
 PyQt5_sip==12.15.0
+PyYAML==6.0.2
+serial==0.0.97
 Werkzeug==3.0.6
 zipp==3.20.2
