--- a/Raspberry/pyvenv.cfg
+++ b/Raspberry/pyvenv.cfg
@@ -1,3 +1,5 @@
 home = /usr/bin
-include-system-site-packages = false
-version = 3.8.10
+include-system-site-packages = true
+version = 3.11.2
+executable = /usr/bin/python3.11
+command = /usr/bin/python -m venv --system-site-packages /home/luca/git/SARA/Raspberry
