BREAKING: update ESP software

--- a/ESP/.vscode/settings.json
+++ b/ESP/.vscode/settings.json
@@ -343,6 +343,7 @@
     "cinttypes": "cpp",
     "typeinfo": "cpp",
     "condition_variable": "cpp",
-    "mutex": "cpp"
+    "mutex": "cpp",
+    "csignal": "cpp"
   }
 }
